# json-to-models

./: LICENSE  README.md  models.py  pyproject.toml  test.py
json_data/: project1.json  project2.json  project3.json
src/json_to_models/: __init__.py
src/json_to_models.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
