[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "json_to_models"
version = "0.0.4"
authors = [
  { name="Ricky Ding" },
]
description = "extracts python models from json files"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/tesla-cat/json-to-models"
"Bug Tracker" = "https://github.com/tesla-cat/json-to-models/issues"
